--- a/page1.html
+++ b/page1.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html>
+
 <head>
-<style>            
-</style>
-<script>
-</script>
-</head>    
+    <style>
+    </style>
+    <script>
+    </script>
+</head>
+
 <body>
-The quick brown fox jumps over the lazy brown dog.
+    The quick <b>brown fox </b> jumps over the lazy brown dog.
 </body>
+
 </html>
